# Deepseek-OCR-API.rs

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  README_CN.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-binaries.yml  build-cuda-containers.yaml  build-extended-artifacts.yml
baselines/: README.md
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs  progress.rs
crates/assets/src/providers/: hugging_face.rs  mod.rs  modelscope.rs
crates/cli/: Cargo.toml  README.md  README_CN.md
crates/cli/src/: app.rs  args.rs  bench.rs  logging.rs  main.rs  prompt.rs  resources.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  fs.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: benchmark.rs  cache.rs  inference.rs  lib.rs  memlog.rs  runtime.rs  sampling.rs  streaming.rs  tensor.rs  test_utils.rs
crates/core/src/config/: mod.rs
crates/core/src/conversation/: mod.rs
crates/core/src/model/: mod.rs
crates/core/src/transformer/: block.rs  cache.rs  decoder.rs  mod.rs  model.rs  rope.rs  weights.rs
crates/core/src/vision/: sam.rs
crates/core/tests/: baseline.rs  config.rs  conversation_templates.rs  model_core.rs  transformer_block.rs  transformer_cache.rs  transformer_decoder.rs  transformer_model.rs  transformer_weights.rs  vision_clip.rs  vision_sam.rs  vision_weights.rs
crates/core/tests/common/: test_utils.rs
crates/dsq/: Cargo.toml
crates/dsq-cli/: Cargo.toml
crates/dsq-cli/src/: main.rs
crates/dsq-models/: Cargo.toml
crates/dsq-models/src/: lib.rs
crates/dsq-models/src/adapters/: deepseek_ocr.rs  helpers.rs  mod.rs  paddleocr_vl.rs
crates/dsq-runtime/: Cargo.toml
crates/dsq-runtime/src/: lib.rs
crates/dsq-writer/: Cargo.toml
crates/dsq-writer/src/: lib.rs
crates/dsq/src/: lib.rs
crates/infer-deepseek/: Cargo.toml
crates/infer-deepseek/src/: lib.rs  quantization.rs
crates/infer-deepseek/src/model/: mod.rs
crates/infer-deepseek/src/quant_snapshot/: mod.rs
crates/infer-deepseek/src/transformer/: block.rs  cache.rs  decoder.rs  model.rs  rope.rs  weights.rs
crates/infer-deepseek/src/vision/: clip.rs  mod.rs  preprocess.rs  resample.rs  sam.rs
crates/infer-deepseek/tests/: baseline.rs  config.rs  model_core.rs  transformer_block.rs  transformer_cache.rs  transformer_decoder.rs  transformer_model.rs  transformer_weights.rs  vision_clip.rs  vision_sam.rs  vision_weights.rs
crates/infer-deepseek/tests/common/: test_utils.rs
crates/infer-dots/: Cargo.toml
crates/infer-dots/src/: lib.rs  model.rs  tokenizer.rs
crates/infer-dots/src/config/: mod.rs
crates/infer-dots/src/transformer/: block.rs  mod.rs  model.rs  rope.rs
crates/infer-dots/src/vision/: dots_vit.rs  mod.rs  preprocess.rs
crates/infer-paddleocr/: Cargo.toml
crates/infer-paddleocr/src/: lib.rs  model.rs  snapshot.rs  weights.rs
crates/infer-paddleocr/src/config/: mod.rs
crates/infer-paddleocr/src/transformer/: attention.rs  block.rs  cache.rs  mod.rs  model.rs  ops.rs  rope.rs  weights.rs
crates/infer-paddleocr/src/vision/: encoder.rs  mod.rs  preprocess.rs  projector.rs
crates/server/: Cargo.toml  README.md  README_CN.md
crates/server/src/: app.rs  args.rs  cors.rs  error.rs  generation.rs  logging.rs  main.rs  models.rs  resources.rs  routes.rs  state.rs  stream.rs
docker/: Dockerfile.alpine  Dockerfile.cuda  Dockerfile.mkl
scripts/: capture_baseline.py  compare_bench.py  dump_vision_weights.py  paddleocr_vl_fixture.py  python_bench.py
