[workspace]
members = [
    "crates/core",
    "crates/assets",
    "crates/cli",
    "crates/server",
    "crates/config",
]
resolver = "2"

[workspace.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deepseek-ocr-core = { path = "./crates/core" }
deepseek-ocr-assets = { path = "./crates/assets" }
deepseek-ocr-config = { path = "./crates/config" }
tokenizers = { version = "0.22", default-features = true }
candle-core = { git = "https://github.com/huggingface/candle", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle", default-features = false }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
# Currently tracing-subscriber 0.3.20 breaks color output
# See https://github.com/tokio-rs/tracing/issues/3378
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "fmt", "ansi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1