[package]
name = "deepseek-ocr-assets"
version = "0.1.0"
edition = "2024"

[dependencies]
hf-hub = { version = "0.4.3", default-features = false, features = ["rustls-tls", "ureq"] }
deepseek-ocr-core = { workspace = true }
deepseek-ocr-infer-deepseek = { path = "../infer-deepseek" }
indicatif = "0.17"
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
