[package]
name = "deepseek-ocr-cli"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true}
image = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
deepseek-ocr-core = { workspace = true }
deepseek-ocr-assets = { workspace = true }
deepseek-ocr-config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
dhat-heap = ["deepseek-ocr-core/dhat-heap"]
memlog = ["deepseek-ocr-core/memlog"]
flash-attn = ["deepseek-ocr-core/flash-attn"]
metal = ["deepseek-ocr-core/metal"]
cuda = ["deepseek-ocr-core/cuda"]
bench-metrics = ["deepseek-ocr-core/bench-metrics"]
