[package]
name = "deepseek-ocr-cli"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true}
image = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
deepseek-ocr-core = { workspace = true }
deepseek-ocr-infer-deepseek = { path = "../infer-deepseek" }
deepseek-ocr-infer-paddleocr = { path = "../infer-paddleocr" }
deepseek-ocr-assets = { workspace = true }
deepseek-ocr-config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
dhat-heap = ["deepseek-ocr-core/dhat-heap"]
memlog = [
    "deepseek-ocr-core/memlog",
    "deepseek-ocr-infer-deepseek/memlog",
    "deepseek-ocr-infer-paddleocr/memlog",
]
flash-attn = [
    "deepseek-ocr-core/flash-attn",
    "deepseek-ocr-infer-deepseek/flash-attn",
    "deepseek-ocr-infer-paddleocr/flash-attn",
]
metal = [
    "deepseek-ocr-core/metal",
    "deepseek-ocr-infer-deepseek/metal",
    "deepseek-ocr-infer-paddleocr/metal",
]
accelerate = [
    "deepseek-ocr-core/accelerate",
    "deepseek-ocr-infer-deepseek/accelerate",
    "deepseek-ocr-infer-paddleocr/accelerate",
]
cuda = [
    "deepseek-ocr-core/cuda",
    "deepseek-ocr-infer-deepseek/cuda",
    "deepseek-ocr-infer-paddleocr/cuda",
]
mkl = [
    "deepseek-ocr-core/mkl",
    "deepseek-ocr-infer-deepseek/mkl",
    "deepseek-ocr-infer-paddleocr/mkl",
]
bench-metrics = ["deepseek-ocr-core/bench-metrics"]
