[package]
name = "deepseek-ocr-core"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
candle-core = { workspace = true }
image = { workspace = true }
candle-nn = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
once_cell = "1.19"
dhat = "0.3.3"
candle-flash-attn = { version = "0.9", default-features = false, optional = true }
tokenizers = { version = "0.22", default-features = true }

[features]
default = []
dhat-heap = []
memlog = []
flash-attn = ["candle-flash-attn"]
bench-metrics = []
metal = [
    "candle-core/metal",
    "candle-nn/metal",
]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
]

[dev-dependencies]
ndarray = "0.16"
ndarray-npy = "0.9"
