[package]
name = "deepseek-ocr-server"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
rocket = { version = "0.5.0", features = ["json"] }
uuid = { version = "1.8", features = ["v4"] }
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tokio-stream = "0.1"
anyhow = { workspace = true }
clap = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
deepseek-ocr-core = { workspace = true }
deepseek-ocr-assets = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
